--- a/ITTasks/appsettings.json
+++ b/ITTasks/appsettings.json
@@ -7,6 +7,6 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "ITTaskConnection": "Data Source=.;Initial Catalog=ITTasksDb;Trusted_Connection=True;TrustServerCertificate=True"
+        "ITTaskConnection": "Data Source=ittask.db"
     }
 }
