create task with import excel and error handling and etc

--- a/ITTasks/appsettings.json
+++ b/ITTasks/appsettings.json
@@ -8,5 +8,10 @@
     "AllowedHosts": "*",
     "ConnectionStrings": {
         "ITTaskConnection": "Data Source=ittask.db"
+    },
+    "JWT": {
+        "ValidAudience": "ittask",
+        "ValidIssuer": "http://localhost:5000",
+        "Secret": "JWTAuthenticationHIGHsecuredPasswordVVVp10H7Xasd707"
     }
 }
