Add SignUp And Update Login And Add Email Service For Confirmed Email And Add Forget Password Feature

--- a/ITTasks/appsettings.Development.json
+++ b/ITTasks/appsettings.Development.json
@@ -1,8 +1,15 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "MailSettings": {
+        "Mail": "robbie.cummerata@ethereal.email",
+        "DisplayName": "Alireza/Mehbang",
+        "Password": "wJQ1CjraW7tyzqhVHN",
+        "Host": "smtp.ethereal.email",
+        "Port": 587
     }
-  }
 }
