--- a/ITTasks/appsettings.json
+++ b/ITTasks/appsettings.json
@@ -13,5 +13,12 @@
         "ValidAudience": "ittask",
         "ValidIssuer": "http://localhost:5000",
         "Secret": "JWTAuthenticationHIGHsecuredPasswordVVVp10H7Xasd707"
+    },
+    "MailSettings": {
+        "Mail": "robbie.cummerata@ethereal.email",
+        "DisplayName": "Alireza/Mehbang",
+        "Password": "wJQ1CjraW7tyzqhVHN",
+        "Host": "smtp.ethereal.email",
+        "Port": 587
     }
 }
